# ConwaysGOL

./: CMakeLists.txt  README.md
include/: GOL.h
src/: GOL.cpp  main.cpp
